--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "easy-trie",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "description": "An easy to easy TypeScript implementation of the Trie data structure for ",
   "main": "bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx webpack --config=webpack.config.js",
+    "prod": "webpack --mode production",
+    "start": "node dist/bundle.js",
+    "test": "jasmine-ts --config=jasmine.json",
+    "lint": "eslint src --fix --ext .ts",
+    "compileonsave": "npm run build -- -w"
   },
   "author": "arghasarkar",
   "repository": {
@@ -21,5 +26,21 @@
   "bugs": {
     "url": "https://github.com/arghasarkar/easy-trie/issues"
   },
-  "homepage": "https://github.com/arghasarkar/easy-trie#readme"
+  "homepage": "https://github.com/arghasarkar/easy-trie#readme",
+  "devDependencies": {
+    "@types/jasmine": "^3.5.11",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.3.1",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "jasmine": "^3.5.0",
+    "jasmine-spec-reporter": "^5.0.2",
+    "jasmine-ts": "^0.3.0",
+    "ts-loader": "^8.0.0",
+    "ts-node": "^8.10.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "typescript": "^3.9.7"
+  }
 }
